Closed Bug 1274368 Opened 10 years ago Closed 10 years ago

Resize grippy in vertical-rl writing-mode is misoriented

Categories

(Core :: Layout: Form Controls, defect)

All
Linux
defect
Not set
minor

Tracking

()

VERIFIED FIXED
mozilla49
Tracking Status
firefox49 --- fixed

People

(Reporter: bugzilla, Assigned: jfkthame)

References

(Blocks 1 open bug)

Details

(Keywords: testcase)

Attachments

(2 files)

Tests ----- <div>: http://www.gtalbot.org/BrowserBugsSection/CSS3WritingModes/s31-resize-ui-vrl-002.xht <textarea>: http://test.csswg.org/suites/css-writing-modes-3_dev/nightly-unstable/html/form-controls-vrl-005.htm http://test.csswg.org/suites/css-writing-modes-3_dev/nightly-unstable/html/form-controls-srl-005.htm Actual ------ The resizing grippy is oriented like /// Expected -------- The resizing grippy should be instead oriented like \\\ . So, it should be rotated 90 degrees clock-wise from its actual orientation. Explanations ------------ This bug only affects 'vertical-rl' and 'sideways-rl' writing-modes. There is no problem about the location of the resizing grippy itself: it is located at bottom-left corner. This minor layout bug surfaced very recently but, as far as I can say, this is not a regression. Firefox 48.0a1 buildID=20160401175617 had *not* this layout issue since the resizing grippy was not displayed. I do not know if this is a Linux-only bug. Notes ----- - I am using Firefox 49.0a1 buildID=20160519030232 - I use Linux 3.13.0-86-generic x86_64, Qt: 4.8.6, KDE 4.13.3; Kubuntu (trusty) 14.04.4 LTS - I've searched for duplicates and did not find any.
Blocks: writing-mode
Component: Layout → Layout: Form Controls
Keywords: testcase
Blocks: 1077520
No longer blocks: writing-mode
It seems to me the vrl testcases work fine on OS X and Windows with release and dev edition. For the srl testcase, OS X displays that in a wrong orientation like what you described in comment 0. In addition, for that testcase, the cursor on both OS X and Windows has wrong direction.
> For the srl testcase, OS X displays that in a wrong orientation like what > you described in comment 0. Xidorn, could you create a new and separate bug report for that then? I could do it but then I would not be able to answer simple questions or make useful comment. > In addition, for that testcase, the cursor on > both OS X and Windows has wrong direction. Are you saying that when hovering the cursor over the resize grippy, the cursor is wrong? You should add this into a new and distinct bug report. In all fairness, I can not since I do not use OS X and do not use Windows.
Under Linux, when the cursor hovers over the resizing grippy of the textarea in http://test.csswg.org/suites/css-writing-modes-3_dev/nightly-unstable/html/form-controls-srl-005.htm the cursor is wrong: it is nw-resize (actual) when it should be sw-resize (expected)
I created the Windows and Mac OS X version of this bug report: bug 1274658 : [Windows] [Mac OS X] Resize grippy misoriented and wrong cursor direction in sideways-rl writing-mode
This fixes the resizer on Linux for vertical-rl modes; its rendering depends on the horizontal directionality of the frame, which in vertical modes is the block direction, not the inline-bidi directionality.
Attachment #8755153 - Flags: review?(dholbert)
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Attachment #8755153 - Flags: review?(dholbert) → review+
Attachment #8755154 - Flags: review?(dholbert) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/3f89159a4800b953b1b6adcf31def422fa825cf6 Bug 1274368 - Draw resizer as RTL for elements with vertical-rl writing mode. r=dholbert https://hg.mozilla.org/integration/mozilla-inbound/rev/9be53a1ae3639d538be7174e820fe42f3a8ffe25 Bug 1274368 - Reftest for resizers on elements with vertical writing modes. r=dholbert
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
I get expected results when using Firefox 49.0a1 buildID=20160524073714 so marking as VERIFIED
Status: RESOLVED → VERIFIED
See Also: → 1094845
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: