Bug 1274368 - Draw resizer as RTL for elements with vertical-rl writing mode. r=dholbert